--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="nav">
-            <h1 class="logo"><a href="../index.html">FITNIX</a></h1>
+             <div class="logo"><a href="./index.html">FITNIX</a></div>
             <ul class = "links">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
@@ -26,7 +26,11 @@
     <main>
     </main>
     <footer>
-        <p>&copy; 2026 All rights reserved</p>
+        <div class="footer-content">
+            <p>Developed by Tonoy, Eitmam, Arpan & Bhupendra (Group 03). This is a student project for educational purposes only. No commercial use intended.</p>
+            <p>&copy; 2026 FITNIX. All rights reserved.</p>
+        </div>
+
     </footer>
 </body>
 </html>
