--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,28 +6,66 @@
     <title>Gallery</title>
     <link rel="stylesheet" href="../css/style.css">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
     
 </head>
 <body>
     <header>
         <nav class="nav">
-            <h1 class="logo"><a href="../index.html">FITNIX</a></h1>
+             <div class="logo"><a href="./index.html">FITNIX</a></div>
             <ul class = "links">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./gallery.html" class="active">Gallery</a></li>
                 <li><a href="./about.html" >About us</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
-<a href="./contact.html" class="nav-button">Join Now</a>
+            <a href="./contact.html" class="nav-button">Join Now</a>
         </nav> 
     </header>
     <main>
-        
-    </main>
+        <section class="gallery-intro hero-content">
+            <h1>Training Gallery</h1>
+            <p>At FITNIX, we offer a range of fitness programs designed for women of all levels.</p>
+        </section>
+
+    <section class="gallery-section">
+        <h2>Strength Training</h2>
+        <div class="gallery-grid">
+        <figure>
+            <img src="../images/lifting_dumple.png" alt="Woman lifting dumbbells">
+            <figcaption>Personalised strength workouts</figcaption>
+        </figure>
+
+        <figure>
+            <img src="../images/trainer_assist.png" alt="Trainer assisting a woman with weights">
+            <figcaption>Guided training sessions</figcaption>
+        </figure>
+        </div>
+    </section>
+
+    <section class="gallery-section">
+        <h2>Group Fitness Classes</h2>
+        <div class="gallery-grid">
+        <figure>
+            <img src="../images/team_cheer.png" alt="Women participating in group fitness class">
+            <figcaption>Motivating group classes</figcaption>
+        </figure>
+
+        <figure>
+            <img src="../images/exerciseing_in_groups.png" alt="Women stretching after workout">
+            <figcaption>Supportive community atmosphere</figcaption>
+        </figure>
+        </div>
+    </section>
+</main>
+
     <footer>
-        <p>&copy; 2026 All rights reserved</p>
+        <div class="footer-content">
+            <p>Developed by Tonoy, Eitmam, Arpan & Bhupendra (Group 03). This is a student project for educational purposes only. No commercial use intended.</p>
+            <p>&copy; 2026 FITNIX. All rights reserved.</p>
+        </div>
+
     </footer>
 </body>
 </html>
