Contact Page Done

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="nav">
-             <div class="logo"><a href="./index.html">FITNIX</a></div>
+             <div class="logo"><a href="../index.html">FITNIX</a></div>
             <ul class = "links">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
