--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,6 +44,7 @@
 
     <!-- Contact Content -->
     <section class="section">
+      <h2 id="hideme">Hello</h2>
       <div class="container">
         <div class="grid grid-2 contact-grid">
           <!-- Contact Details -->
@@ -74,34 +75,17 @@
             <form class="contact-form" action="#" method="post">
               <div class="form-row">
                 <label for="fullName">Full Name <span aria-hidden="true">*</span></label>
-                <input
-                  type="text"
-                  id="fullName"
-                  name="fullName"
-                  placeholder="e.g., Tanvir Genius"
-                  required
-                />
+                <input type="text" id="fullName" name="fullName" placeholder="e.g., Tanvir Genius" required>
               </div>
 
               <div class="form-row">
                 <label for="email">Email Address <span aria-hidden="true">*</span></label>
-                <input
-                  type="email"
-                  id="email"
-                  name="email"
-                  placeholder="e.g., tanvir@example.com"
-                  required
-                />
+                <input type="email" id="email" name="email" placeholder="e.g., tanvir@example.com" required >
               </div>
 
               <div class="form-row">
                 <label for="phone">Phone Number</label>
-                <input
-                  type="tel"
-                  id="phone"
-                  name="phone"
-                  placeholder="e.g., 04xx xxx xxx"
-                />
+                <input type="tel" id="phone" name="phone" placeholder="e.g., 04xx xxx xxx" >
               </div>
 
               <div class="form-row">
@@ -118,27 +102,21 @@
               <fieldset class="form-row">
                 <legend>Preferred Training Goal</legend>
                 <div class="radio-group">
-                  <label><input type="radio" name="goal" value="weightloss" checked /> Weight loss</label>
-                  <label><input type="radio" name="goal" value="strength" /> Strength</label>
-                  <label><input type="radio" name="goal" value="fitness" /> General fitness</label>
-                  <label><input type="radio" name="goal" value="confidence" /> Confidence & routine</label>
+                  <label><input type="radio" name="goal" value="weightloss" checked > Weight loss</label>
+                  <label><input type="radio" name="goal" value="strength" > Strength</label>
+                  <label><input type="radio" name="goal" value="fitness" > General fitness</label>
+                  <label><input type="radio" name="goal" value="confidence" > Confidence & routine</label>
                 </div>
               </fieldset>
 
               <div class="form-row">
                 <label for="message">Message <span aria-hidden="true">*</span></label>
-                <textarea
-                  id="message"
-                  name="message"
-                  rows="5"
-                  placeholder="Tell us what you’re looking for (classes, schedule, goals)..."
-                  required
-                ></textarea>
+                <textarea id="message" name="message" rows="5" placeholder="Tell us what you’re looking for (classes, schedule, goals)..."></textarea>
               </div>
 
               <div class="form-row checkbox-row">
                 <label>
-                  <input type="checkbox" name="consent" required />
+                  <input type="checkbox" name="consent" required >
                   I agree that FITNIX may contact me regarding this enquiry.
                 </label>
               </div>
