--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
                 <!-- <h2 class="heading"> TRANSFORM YOUR FITNESS JOURNEY -->
                     <!-- WITH <span>FITNIX</span></h2> -->
                     <h1 class="heading"> Transform your fitness journey with <span>FITNIX</span></h1>
-                    <img id="avatar" src="./images/avatar1.png" alt="Fitness Image 1">
-                    <!-- <div class="images">
+                    <img id="avatar" src="./media/avatar1.png" alt="Fitness Image 1">
+                    <!-- <div class="media">
                       
-                      <img src="./images/avatar2.png" alt="Fitness Image 2">
-                      <img src="./images/avatar3.png" alt="Fitness Image 3">
+                      <img src="./media/avatar2.png" alt="Fitness Image 2">
+                      <img src="./media/avatar3.png" alt="Fitness Image 3">
                     </div> -->
-                <p>FITNIX is a fitness club exclusively for women who want to train in an environment that feels safe, 
+                <p>FITNIX is a fitness club exclusively for <span>women</span> who want to train in an environment that feels safe, 
               comfortable, and motivating. No judgment. No pressure to look a certain way. 
               No comparison games. Just movement, discipline, and a community that genuinely supports each other.</p>
                 <a href="./pages/contact.html" class="hero-button">Get Started</a>
             </div>
-            <img src="./images/exercise.png" alt="Exercise Image" class="exercises-image">
+            <img src="./media/exercise.png" alt="Exercise Image" class="exercises-image">
         </section>
         
     </main>
