--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
     <section class="page-hero">
       <div class="container">
         <h1>About FITNIX</h1>
-        <img class="avatar_image" src="../images/avatar4.png" alt="standing_with_ball" >
+        <img class="avatar_image" src="../media/avatar4.png" alt="standing_with_ball" >
         <p>
           FITNIX is a women-only fitness club built around safety, confidence, and sustainable progress.
           We focus on smart training, supportive coaching, and a welcoming environment for all fitness levels.
@@ -74,6 +74,7 @@
       </div>
     </section>
 
+    <img src="../media/women_lifting_dumbles.png" alt="women_lifting_dumbles" class="exercises-image active">
     <!-- Services -->
     <section class="section section-alt">
       <div class="container">
@@ -137,6 +138,7 @@
       </div>
     </section>
 
+    
     <!-- Why Choose Us -->
     <section class="section">
       <div class="container">
