--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -33,12 +33,12 @@
         <h2>Strength Training</h2>
         <div class="gallery-grid">
         <figure>
-            <img src="../images/lifting_dumple.png" alt="Woman lifting dumbbells">
+            <img src="../media/lifting_dumple.png" alt="Woman lifting dumbbells">
             <figcaption>Personalised strength workouts</figcaption>
         </figure>
 
         <figure>
-            <img src="../images/trainer_assist.png" alt="Trainer assisting a woman with weights">
+            <img src="../media/trainer_assist.png" alt="Trainer assisting a woman with weights">
             <figcaption>Guided training sessions</figcaption>
         </figure>
         </div>
@@ -48,12 +48,12 @@
         <h2>Group Fitness Classes</h2>
         <div class="gallery-grid">
         <figure>
-            <img src="../images/team_cheer.png" alt="Women participating in group fitness class">
+            <img src="../media/team_cheer.png" alt="Women participating in group fitness class">
             <figcaption>Motivating group classes</figcaption>
         </figure>
 
         <figure>
-            <img src="../images/exerciseing_in_groups.png" alt="Women stretching after workout">
+            <img src="../media/exerciseing_in_groups.png" alt="Women stretching after workout">
             <figcaption>Supportive community atmosphere</figcaption>
         </figure>
         </div>
