Added Author and Description meta tag in our home page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="FITNIX - A safe and supportive fitness club exclusively for women. Join our community for judgment-free training and genuine support.">
+    <meta name="author" content="Tanvir Tonoy, Eitmam, Arpan, Bhupendra">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="css/style.css">
